<resources>
    <string name="AppTools">App Info:</string>
    <string name="P_not_found">"Error: Program files could not be found!
Check the dalvik-cache location to solve this problem!
Default: /data/dalvik-cache/*"</string>
    <string name="PatchResult">Patch results</string>
    <string name="Yes">Yes</string>
    <string name="about_working_dir">Working directory on SD Card:</string>
    <string name="aboutlp">Lucky Patcher is a universal patching tool. It is intended to modify applications in the following ways: Remove ads, Remove Google license verification (Automatically and manually), Manage permissions, and more.</string>
    <string name="aboutmenu">About</string>
    <string name="abouttitle">About Lucky Patcher by ChelpuS</string>
    <string name="activity_ads_descr">"App's Activity is Used for Advertising."</string>
    <string name="activity_descr">"App's Activity. Description Unavailable."</string>
    <string name="additinfo">Additional Info:</string>
    <string name="adsdescr">Show all apps with Google Ads.</string>
    <string name="adstitle">Apps with ads</string>
    <string name="advanced_menu">Open Menu of Patches</string>
    <string name="all_custom_patches_updated">All custom patches were updated</string>
    <string name="allchanges">All changes were fixed in ODEX and will persist until the application is reinstalled!</string>
    <string name="apk_create_option">Filename for Recompiled APKs</string>
    <string name="apk_not_found_error">Error: APK file could not be found.</string>
    <string name="apk_size">APK size:</string>
    <string name="apkdescr">Naming scheme for new APK files.</string>
    <string name="apklabel">"Based on App's Label"</string>
    <string name="apkpackage">"Based on App's Package Name"</string>
    <string name="app_dialog_no_root_app_control">Manage the app</string>
    <string name="app_info">App Info</string>
    <string name="app_install_success">Application has been successfully installed.</string>
    <string name="app_name">Lucky Patcher</string>
    <string name="app_not_found">App could not be found! Please install the application and try again.</string>
    <string name="back">Back</string>
    <string name="backbutton">Backup</string>
    <string name="backup_data_empty">App Data is empty. There is nothing to backup.</string>
    <string name="backup_data_error">Error: Something went wrong. The backup is most likely incomplete.</string>
    <string name="backup_data_success">Settings have been successfully saved.</string>
    <string name="backup_delete_message">Do you really want to delete this backup?</string>
    <string name="backup_done">"Backup succeeded. Path:
"</string>
    <string name="backups_not_found">No backup files were found in:</string>
    <string name="begin_changelog">Installed version is:</string>
    <string name="billing_buy">Do you want to try to get this item for free?</string>
    <string name="billing_hack">"Author and programmer is dschuermann (Dominik)
"</string>
    <string name="billing_hack2_auto_repeat_note">To disable auto-repeat you must select app and go to \"Tools\"->\"Remove selected saved purchases\" and delete item.</string>
    <string name="billing_hack2_new">"- For the best results you must make a patch to Android \"Signature Verification status always True\";
- To disable the hack go to \"Switches\" on the bottom panel Lucky Patcher and choose \"Disable Google Billing Emulation\"."</string>
    <string name="billing_hack_menu">Google Billing Emulation</string>
    <string name="billing_hack_menu_descr">Requires \"Support patch for InApp and LVL\" to target Application and applied \"Patch to Android\". Use custom patch \"Support.InApp.LVL...\" for Google Play for right purchase information and price within the application.</string>
    <string name="billing_hack_menu_disable">Disable Google Billing Emulation</string>
    <string name="billing_hack_menu_enable">Enable Google Billing Emulation</string>
    <string name="billing_hack_option">Send a reply to the application unsigned (this may work for non-root users)</string>
    <string name="billing_hack_option2">Save purchase for restore</string>
    <string name="bind_button">Add new Directory Bind!</string>
    <string name="bind_delete">Do you want to remove this directory bind?</string>
    <string name="bind_dialog_button">Bind Directory</string>
    <string name="bind_dialog_source">Directory with Data:</string>
    <string name="bind_dialog_target">Mount directory with data to:</string>
    <string name="bind_error">Binding failed! Data directory could not be found on device.</string>
    <string name="bind_source">Directory with Data:</string>
    <string name="bind_target">Mount Data to:</string>
    <string name="binder_browser">Browser</string>
    <string name="binder_browser_create_dir">Create directory</string>
    <string name="binder_browser_current_dir">Current directory:</string>
    <string name="binder_browser_select">Select current directory</string>
    <string name="binder_delete">Delete</string>
    <string name="bootview">Bootlist</string>
    <string name="busybox_not_found">Warning: Busybox could not be found. Lucky Patcher cannot continue without Busybox...</string>
    <string name="button_advanced_filter">Filters</string>
    <string name="button_for_delete">Delete</string>
    <string name="button_move_to_sdcard">Move to SD Card</string>
    <string name="cancel">Cancel</string>
    <string name="change_icon_lp">Change Icon</string>
    <string name="change_icon_lp_descr">You can change the default icon for Lucky Patcher in your launcher.</string>
    <string name="changelog">Changelog</string>
    <string name="cleardalvik">Clear Dalvik-cache and Reboot</string>
    <string name="cleardata">Clear Data</string>
    <string name="cloneApplication">Clone application (It work not for all)</string>
    <string name="collect_logs">Collecting logs...</string>
    <string name="context_automodeslvl">Auto Modes</string>
    <string name="context_backup_apk">Backup .apk file</string>
    <string name="context_backup_data">Backup App settings</string>
    <string name="context_batch_operations">Batch operations</string>
    <string name="context_blockads">Block Ads on Device</string>
    <string name="context_change_components_menu">"Change The App's Components"</string>
    <string name="context_clearhosts">"Clear The Local 'hosts' File"</string>
    <string name="context_crt_apk_permission">APK with changed Permissions and Activities</string>
    <string name="context_dependencies">Remove dependencies</string>
    <string name="context_dexopt_app">ODEX This App</string>
    <string name="context_disableActivity">Disable Ad Activities</string>
    <string name="context_disableComponents">"Disable components
'pm disable' method
(may be enabled by the application)"</string>
    <string name="context_disable_google_ads">Turn off Google Ads services</string>
    <string name="context_disable_package">Disable Package (Freeze)</string>
    <string name="context_enable_google_ads">Turn on back Google Ads services</string>
    <string name="context_enable_package">Enable package</string>
    <string name="context_hard_apk_permission">"Change Permissions
Save original Signature.
(unstable method)"</string>
    <string name="context_hide_lp">Hide Lucky Patcher</string>
    <string name="context_hide_lp_descr">Try to hide Lucky Patcher from other Apps. Burden on the system, use only if needed.</string>
    <string name="context_install">Install</string>
    <string name="context_install_as_system">Install as a System App</string>
    <string name="context_integrate_update_selected_apps">Integrate update to /system selected apps</string>
    <string name="context_move_selected_apps_to_internal">Move selected apps to internal storage</string>
    <string name="context_move_selected_apps_to_sdcard">Move selected apps to SD Card</string>
    <string name="context_rebuild">Rebuild</string>
    <string name="context_removeAds">Patch to remove Google Ads</string>
    <string name="context_remove_saved_purchaces">Remove selected saved purchases</string>
    <string name="context_restore_apk">Reinstall .apk file</string>
    <string name="context_restore_data">Restore App settings</string>
    <string name="context_safe_apk_permission">"Change Permissions and Activities
Rebuild and Install"</string>
    <string name="context_safe_sign_apk_permission">"Change Permissions and Activities
Save original Signature (Safe method)"</string>
    <string name="context_support_patch">Support patch for InApp and LVL emulation</string>
    <string name="context_tools">Tools</string>
    <string name="context_unblockads">Unblock Ads on Device</string>
    <string name="context_uninstall_if_installed">Uninstall and install</string>
    <string name="context_uninstall_selected_apps">Uninstall selected user apps</string>
    <string name="contextads">Remove Google Ads</string>
    <string name="contextbackup">Backup</string>
    <string name="contextblockfileads">Remove links from APK</string>
    <string name="contextblockfileads_descr">Removes http:// links using templates from files AdsBlockList_user_edit.txt and AdsBlockList.txt.</string>
    <string name="contextboot">"Patch on Reboot
(Unstable! Only for patching libs)"</string>
    <string name="contextbootads">Remove Google Ads</string>
    <string name="contextbootcustom">Custom Patch</string>
    <string name="contextbootlvl">Remove License Verification</string>
    <string name="contextcorepatch1">Signature Verification status always True</string>
    <string name="contextcorepatch1_descr">Necessary for emulations InApp, LVL and keygens. Needed for right verification of purchases and licenses.</string>
    <string name="contextcorepatch2">Disable .apk Signature Verification</string>
    <string name="contextcorepatch2_descr">"Allows the modification of an application without creating a signature again, so the developer's signature will stay untouched. Other users can install this .apk only after applying a patch to the Android Core (useful when translating, modifying graphics, etc. in protected applications)"</string>
    <string name="contextcorepatch3">Disable signature verification in the package manager</string>
    <string name="error_detect">It appears that Lucky Patcher has force-closed, do you want to send a bug report?</string>
    <string name="install">Install</string>
    <string name="install_as_user_app">Install Google Play as User App.</string>
    <string name="launchbutton">Launch</string>
    <string name="market_version1">"Modded Google Play 3.10.14
(Android 2.2 or higher)"</string>
    <string name="market_version2">"Modded Android Market 2.3.6
(Android 2.1)"</string>
    <string name="market_version3">"Original Google Play 3.10.14
(Android 2.2 or higher)"</string>
    <string name="market_version4">"Original Android Market 2.3.6
(Android 2.1)"</string>
    <string name="market_version5">Modded Google Play</string>
    <string name="market_version6">Original Google Play</string>
    <string name="mod_market_check">Test Modded Google Play Store</string>
    <string name="no">No</string>
    <string name="or_hex_str">Original Hex-String:</string>
    <string name="patchbutton">Patch</string>
    <string name="rep_hex_str">Replacement Hex-String:</string>
    <string name="restorebutton">Restore</string>
    <string name="search">Search</string>
    <string name="sel_target">Select Target!</string>
    <string name="select_market">"Please choose a version of the Google Play Store to install:
"</string>
    <string name="toolbar_backups">Backups</string>
    <string name="toolbar_rebuild">Rebuild &amp; Install</string>
    <string name="toolbar_switchers">Switches</string>
    <string name="toolbar_system_utils">Toolbox</string>
</resources>