<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/marketrelativeLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/marketbodyscroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:id="@id/appdialogbody" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/app_textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/select_market" android:layout_alignParentTop="true" />
            <RadioGroup android:id="@id/radioGroup1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_alignParentLeft="true">
                <RadioButton android:id="@id/radio63" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version5" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:checked="true" android:text="@string/market_version5" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio50" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version5" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio44" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version5" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version5" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version1" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version2" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio63o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version6" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio60o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version6" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio50o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version6" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio44o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version6" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version6" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version3" android:drawablePadding="8.0dip" />
                <RadioButton android:id="@id/radio3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/market_version4" android:drawablePadding="8.0dip" />
            </RadioGroup>
            <TextView android:id="@id/market_textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="" />
        </LinearLayout>
    </ScrollView>
    <CheckBox android:textColor="#ff529577" android:id="@id/checkUserInstall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/install_as_user_app" android:layout_weight="0.0" android:layout_alignParentLeft="true" />
    <LinearLayout android:gravity="top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/market_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="2.0dip" android:minWidth="120.0dip" android:text="@string/install" android:layout_weight="0.0" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
        <Button android:id="@id/market_check_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="10.0dip" android:text="@string/mod_market_check" android:layout_weight="0.0" android:layout_alignParentBottom="true" android:onClick="mod_market_check" />
    </LinearLayout>
</LinearLayout>