<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ExpandableListView android:id="@id/menu_list" android:background="#ff000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:transcriptMode="disabled" android:layout_weight="0.1" />
    <LinearLayout android:orientation="vertical" android:id="@id/listapps" android:background="#ff000000" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
        <FrameLayout android:id="@id/fragment_filter" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0dip" android:textColor="#ffbbbbbb" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/title_list" android:background="#ff000000" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="title" android:layout_weight="1.0" />
            <TextView android:layout_gravity="center_vertical" android:id="@id/line_hide_vertical" android:background="#ff454545" android:visibility="gone" android:layout_width="1.0px" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="2.0dip" android:text="" android:maxLines="1" />
            <Button android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff00ff00" android:layout_gravity="center" android:id="@id/title_button" android:background="@drawable/cbutton_adv" android:padding="15.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="button" android:layout_weight="0.0" />
        </LinearLayout>
        <TextView android:id="@id/line_hide_horisontal" android:background="#ff454545" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="5.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="2.0dip" android:text="" android:maxLines="1" />
        <ExpandableListView android:id="@id/explistapps" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="false" android:transcriptMode="disabled" android:layout_weight="1.0" />
    </LinearLayout>
    <HorizontalScrollView android:id="@id/horizontalScrollToolbar" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:layout_weight="0.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip">
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffa0a0a0" android:id="@id/button8" android:background="@drawable/button_panel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:minWidth="1.0dip" android:minHeight="1.0dip" android:text="@string/toolbar_switchers" android:onClick="toolbar_switchers_click" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button7" android:background="@drawable/button_panel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:minWidth="1.0dip" android:minHeight="1.0dip" android:text="@string/toolbar_system_utils" android:onClick="toolbar_system_utils_click" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button2" android:background="@drawable/button_panel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:minWidth="1.0dip" android:minHeight="1.0dip" android:text="@string/search" android:onClick="toolbar_refresh_click" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button3" android:background="@drawable/button_panel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:minWidth="1.0dip" android:minHeight="1.0dip" android:text="@string/toolbar_backups" android:onClick="toolbar_backups_click" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button4" android:background="@drawable/button_panel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:minWidth="1.0dip" android:minHeight="1.0dip" android:text="@string/toolbar_rebuild" android:onClick="toolbar_rebuild_click" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>